Still trying to get the information from other models

--- a/restaurant/templates/ingredients/ingredients.html
+++ b/restaurant/templates/ingredients/ingredients.html
@@ -25,7 +25,7 @@
         {% for ingredient in ingredients %}
         <tr>
             <td>{{ ingredient.ingredient_name }}</td>
-            <td>{{ ingredient.quantity }}</td>
+            <td>{{ ingredient.quantity_buyed }}</td>
             <td>{{ ingredient.unit_of_measure }}</td>
             <td>{{ ingredient.cost }}</td>
             <td> {{ingredient.cost_per_unit}} </td>
