Improve the admin. Price field changed to be read only

--- a/restaurant/templates/ingredients/ingredients.html
+++ b/restaurant/templates/ingredients/ingredients.html
@@ -8,6 +8,9 @@
 
 <a href="{% url 'home' %}">Go back home</a>
 <a href="{% url 'ingredients:ingredientcreate' %}">Create an ingredient</a>
+
+<p>You have a stock value in: {{total_stock}}</p>
+
 <table class="Ingredient Table">
     <thead>
         <tr>
@@ -21,14 +24,21 @@
     </thead>
 
 {% if ingredients %}
+            <th>Cost</th>
+            <th>Cost per unit</th>
+            <th>Create or edit the information</th>
+        </tr>
+    </thead>
+
+{% if ingredients %}
     <tbody>
         {% for ingredient in ingredients %}
         <tr>
-            <td>{{ ingredient.ingredient_name }}</td>
-            <td>{{ ingredient.quantity_buyed }}</td>
-            <td>{{ ingredient.unit_of_measure }}</td>
-            <td>{{ ingredient.cost }}</td>
-            <td> {{ingredient.cost_per_unit}} </td>
+            <td>{{ ingredient.ingredient.name }}</td>
+            <td>{{ ingredient.quantity }}</td>
+            <td>{{ ingredient.ingredient.units}}</td>
+            <td>{{ ingredient.price_total }}</td>
+            <td> {{ingredient.price_per_unit}} </td>
             
             
         </tr> 
