Solve login in error and improving stock table look

--- a/restaurant/templates/home.html
+++ b/restaurant/templates/home.html
@@ -7,7 +7,7 @@
 {% load static %}
 
 {% block container %} 
-<a href="{% url 'ingredients:ingredientslist' %}">Ingredients</a>
+<a href="{% url 'ingredients:ingredientslist' %}">Stock available</a>
 <a href="{% url 'recipes:recipeslist' %}">Recetas</a>
 <a href="">Menu</a>
 <a href="">Ventas</a>
