--- a/restaurant/templates/ingredients/ingredients.html
+++ b/restaurant/templates/ingredients/ingredients.html
@@ -11,23 +11,24 @@
 
     <p>You have a stock value in: </p>
 
-    <table class="Ingredient Table">
+    <table class="table">
+        
         <thead>
             <tr>
-                <th>Ingredient</th>
-                <th>Quantity</th>
-                <th>Unit of measure</th>
-                <th>Cost</th>
-                <th>Cost per unit</th>
-                <th>Create or edit the information</th>
+                <th scope="col">Ingredient</th>
+                <th scope="col">Quantity Available</th>
+                <th scope="col">Unit of measure</th>
+                <th scope="col">Cost</th>
+                <th scope="col">Cost per unit</th>
+                <th scope="col">Create or edit the information</th>
             </tr>
         </thead>
 
     {% if ingredients %}
-                <th>Cost</th>
+                <!-- <th>Cost</th>
                 <th>Cost per unit</th>
                 <th>Create or edit the information</th>
-            </tr>
+            </tr> -->
         </thead>
         <tbody>
             {% for ingredient in ingredients %}
