--- a/restaurant/templates/users/base_login.html
+++ b/restaurant/templates/users/base_login.html
@@ -50,7 +50,7 @@
                                     </a>
                                 </div> -->
                                 <div class="p-2">
-                                    <form class="form-horizontal" action="index.html">
+                                    <form class="form-horizontal" action="{% url 'home' %}">
         
                                         <div class="form-group">
                                             <label for="username">Username</label>
