Sign up look improved. Password Recovery html created

--- a/restaurant/templates/ingredients/ingredients.html
+++ b/restaurant/templates/ingredients/ingredients.html
@@ -9,7 +9,7 @@
     <a href="{% url 'home' %}">Go back home</a>
     <a href="{% url 'ingredients:ingredientcreate' %}">Create an ingredient</a>
 
-    <p>You have a stock value in: </p>
+    <p>You have a stock valued in: {{}} COP </p>
 
     <table class="table">
         
