--- a/restaurant/templates/users/login.html
+++ b/restaurant/templates/users/login.html
@@ -59,7 +59,7 @@
                                 </a>
                             </div> -->
                             <div class="p-2">
-                                <form class="form-group" action="{% url 'home' %}">
+                                <form class="form-group" action="{% url 'home' %}" method="POST">
                                     {% csrf_token %}
                                     {% if form.errors %}
                                     <p class="alert alert-danger">
@@ -112,7 +112,7 @@
                                     </div>
 
                                     <div class="mt-4 text-center">
-                                        <a href="{% url 'users:login' %}" class="text-muted"><i class="mdi mdi-lock mr-1"></i> Forgot your password?</a>
+                                        <a href="{% url 'users:password_recovery' %}" class="text-muted"><i class="mdi mdi-lock mr-1"></i> Forgot your password?</a>
                                     </div>
                                 </form>
                             </div>
