--- a/restaurant/templates/users/signup.html
+++ b/restaurant/templates/users/signup.html
@@ -1,4 +1,5 @@
 {% extends 'users/base.html'%}
+{% load static %}
 
 
 {% block head_content %}
@@ -7,13 +8,63 @@
 
 {% block container %}
 
-    <form action="{% url 'users:signup' %}" method="POST">
+
+<div class="account-pages my-5 pt-sm-5">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8 col-lg-6 col-xl-5">
+                <div class="card overflow-hidden">
+                    <div class="bg-soft-primary">
+                        <div class="row">
+                            <div class="col-7">
+                                <div class="text-primary p-4">
+                                    <h5 class="text-primary"> Sign up!</h5>
+                                    <p></p>
+                                </div>
+                            </div>
+                            <div class="col-5 align-self-end">
+                                <img src="{% static 'img/logo_laspoteiros.jpeg' %}" alt="" class="img-fluid">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-body pt-0"> 
+                        <!-- <div>
+                            <a href="{% url 'home' %}">
+                                <div class="avatar-md profile-user-wid mb-4">
+                                    <span class="avatar-title rounded-circle bg-light">
+                                        <img src="{% static 'img/logo_laspoteiros.jpeg' %}" alt="" class="rounded-circle" height="34">
+                                    </span>
+                                </div>
+                            </a>
+                        </div> -->
+                        
+                        <div class="p-2">
+                            <div class="alert alert-success text-center mb-4" role="alert">
+                                Enter your information to create your account
+                            </div>
+                            <form class="form-horizontal" action="{% url 'users:signup' %}" method="POST">
+                                {% csrf_token %}
+                        
+                                {{ form.as_p }}
+                        
+                                <button class="btn btn-primary btn-block mt-5" type="submit">Register!</button>
+                            </form>
+                        </div>
+    
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+    <!-- <form action="{% url 'users:signup' %}" method="POST">
         {% csrf_token %}
 
         {{ form.as_p }}
 
         <button class="btn btn-primary btn-block mt-5" type="submit">Register!</button>
 
-    </form>
+    </form> -->
 
 {% endblock %}
