Landing Page Restart. Performing as the Skote Project

--- a/restaurant/templates/ingredients/ingredients.html
+++ b/restaurant/templates/ingredients/ingredients.html
@@ -9,7 +9,7 @@
     <a href="{% url 'home' %}">Go back home</a>
     <a href="{% url 'ingredients:ingredientcreate' %}">Create an ingredient</a>
 
-    <p>You have a stock valued in: {{}} COP </p>
+    <p>You have a stock valued in: {{Stock.price_per_unit}} COP </p>
 
     <table class="table">
         
@@ -37,7 +37,8 @@
                 <td>{{ ingredient.quantity }}</td>
                 <td>{{ ingredient.ingredient.units}}</td>
                 <td>{{ ingredient.price_total }}</td>
-                <td> {{ingredient.price_per_unit}} </td>  
+                <td> {{ingredient.price_per_unit}} </td>
+            
             </tr> 
             {% endfor %}
         </tbody>
