--- a/restaurant/templates/landingpage.html
+++ b/restaurant/templates/landingpage.html
@@ -589,7 +589,7 @@
 
                                 <div class="mt-3">
                                     <h5>Calvin Smith</h5>
-                                    <P class="text-muted mb-0">Blockchain developer</P>
+                                    <P class="text-muted mb-0">Cashier</P>
                                 </div>
                             </div>
                             <div class="card-footer bg-transparent border-top">
@@ -654,7 +654,7 @@
 
                                 <div class="mt-3">
                                     <h5>Alma Farley</h5>
-                                    <P class="text-muted mb-0">App developer</P>
+                                    <P class="text-muted mb-0">Waitress</P>
                                 </div>
                             </div>
                             <div class="card-footer bg-transparent border-top">
@@ -688,7 +688,7 @@
 
                                 <div class="mt-3">
                                     <h5>Amy Hood </h5>
-                                    <P class="text-muted mb-0">Designer</P>
+                                    <P class="text-muted mb-0">Cheff</P>
                                 </div>
                             </div>
                             <div class="card-footer bg-transparent border-top">
@@ -737,14 +737,14 @@
                 <div class="col-xl-4 col-sm-6">
                     <div class="blog-box mb-4 mb-xl-0">
                         <div class="position-relative">
-                            <img src="{% static 'img/img-1.jpg' %}" alt="" class="rounded img-fluid mx-auto d-block">
-                            <div class="badge badge-success blog-badge font-size-11">Cryptocurrency</div>
+                            <img src="{% static 'img/foodies.jpg' %}" alt="" class="rounded img-fluid mx-auto d-block">
+                            <div class="badge badge-success blog-badge font-size-11">Sales</div>
                         </div>
 
                         <div class="mt-4 text-muted">
                             <p class="mb-2"><i class="bx bx-calendar mr-1"></i> 04 Mar, 2020</p>
-                            <h5 class="mb-3">Donec pede justo, fringilla vele</h5>
-                            <p>If several languages coalesce, the grammar of the resulting language</p>
+                            <h5 class="mb-3">Foodies</h5>
+                            <p>Learn how to choose the ideal foodies for your restaurant </p>
 
                             <div>
                                 <a href="#">Read more</a>
@@ -757,14 +757,14 @@
                     <div class="blog-box mb-4 mb-xl-0">
 
                         <div class="position-relative">
-                            <img src="{% static 'img/img-2.jpg' %}" alt="" class="rounded img-fluid mx-auto d-block">
-                            <div class="badge badge-success blog-badge font-size-11">Cryptocurrency</div>
+                            <img src="{% static 'img/loyalty.jpg' %}" alt="" class="rounded img-fluid mx-auto d-block">
+                            <div class="badge badge-success blog-badge font-size-11">Sales</div>
                         </div>
 
                         <div class="mt-4 text-muted">
                             <p class="mb-2"><i class="bx bx-calendar mr-1"></i> 12 Feb, 2020</p>
-                            <h5 class="mb-3">Aenean ut eros et nisl</h5>
-                            <p>Everyone realizes why a new common language would be desirable</p>
+                            <h5 class="mb-3">Loyalty programs</h5>
+                            <p>Learn how to engage your customer</p>
 
                             <div>
                                 <a href="#">Read more</a>
@@ -776,14 +776,14 @@
                 <div class="col-xl-4 col-sm-6">
                     <div class="blog-box mb-4 mb-xl-0">
                         <div class="position-relative">
-                            <img src="{% static 'img/img-3.jpg' %}" alt="" class="rounded img-fluid mx-auto d-block">
-                            <div class="badge badge-success blog-badge font-size-11">Cryptocurrency</div>
+                            <img src="{% static 'img/social.jpg' %}" alt="" class="rounded img-fluid mx-auto d-block">
+                            <div class="badge badge-success blog-badge font-size-11">Social Media</div>
                         </div>
 
                         <div class="mt-4 text-muted">
                             <p class="mb-2"><i class="bx bx-calendar mr-1"></i> 06 Jan, 2020</p>
-                            <h5 class="mb-3">In turpis, pellentesque posuere</h5>
-                            <p>To an English person, it will seem like simplified English, as a skeptical Cambridge</p>
+                            <h5 class="mb-3">Social media presence</h5>
+                            <p>Where you really need to be publishing at</p>
 
                             <div>
                                 <a href="#">Read more</a>
@@ -796,7 +796,7 @@
         </div>
         <!-- end container -->
     </section>
-    Blog end
+ 
 
     <!-- Faqs start -->
     <section class="section" id="faqs">
