Home Page based on index.html Skote

--- a/restaurant/templates/landingpage.html
+++ b/restaurant/templates/landingpage.html
@@ -44,7 +44,7 @@
 
     <nav class="navbar navbar-expand-lg navigation fixed-top sticky">
         <div class="container">
-            <a class="navbar-logo" href="{% url 'landingpage'  %}" 
+            <a class="navbar-logo" href="{% url 'landingpage'  %}">
                 <img src="{%static 'img/logo_laspoteiros.jpeg' %}" alt="" height="19" class="logo logo-dark">
                 <img src="{%static 'img/logo_laspoteiros.jpeg' %}" alt="" height="19" class="logo logo-light">
             </a>
